@@ -1,3 +1,2 @@
-Remove deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 Remove deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 Remove deprecated RandomVector ctors in 1.14
