@@ -11,6 +11,7 @@
 ==== API changes ====
  * Removed deprecated FunctionalChaosRandomVector::getSobol* methods
  * Removed deprecated UserDefinedCovarianceModel constructor based on a Collection<CovarianceMatrix>
+ * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 
 === Python module ===
 
